apps/media/tautulli/deployment-tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tautulli
  name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - image: tautulli/tautulli:v2.18.2
          name: tautulli
          resources:
            requests:
              memory: 72Mi
          ports:
            - containerPort: 8181
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: tautulli
      restartPolicy: Always
      volumes:
        - name: tautulli
          persistentVolumeClaim:
            claimName: tautulli
