apps/media/tautulli/service-tautulli.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tautulli
  name: tautulli
spec:
  ports:
    - port: 8181
      targetPort: 8181
  selector:
    app: tautulli
